[package]
name = "avis"
version = "0.0.0"
edition = "2021"
description = "avis stands for Audio VISualiser, It takes system audio and produces realtime visuals"
license = "GPL-3.0-or-later"

[dependencies]
avis_audio_lib = { path = "../avis_audio_lib" }
avis_graphics_lib = { path = "../avis_graphics_lib" }
